# py_project

./: .env  docker-compose.yml  pyproject.toml
app/: main.py
app/db/: models.py
app/migrations/versions/: 0b39aa23ddce_add_categories_table.py  9ea6d612d4b9_add_products_table.py  b772ec45c3ac_add_products_table.py
app/routes/: category_routes.py  product_routes.py
app/schemas/: base.py  category.py  product.py
app/test/: conftest.py
app/test/routes/: test_category_routes.py  test_product_routes.py
app/test/schemas/: test_category_schema.py  test_product_schema.py
app/test/use_cases/: test_category_use_cases.py  test_product_user_cases.py
app/use_cases/: category.py  product.py
