[tool.poetry]
name = "project2"
version = "0.1.0"
description = ""
authors = ["see"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.0"
fastapi = "^0.99.1"
uvicorn = "^0.22.0"
sqlalchemy = "^2.0.18"
psycopg2-binary = "^2.9.6"
python-decouple = "^3.8"
alembic = "^1.11.1"
httpx = "^0.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
